# anilist-wrapper

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: api-docs.html
src/anilist/: __init__.py  async_client.py  auth.py  cli.py  client.py  exceptions.py  rate_limiter.py  types.py
src/anilist/models/: __init__.py  base.py  character.py  media.py  user.py
